@@ -135,6 +135,28 @@ namespace MapleCake.Models
             MainWindowViewModel.Instance.RaisePropertyChangedEvent(propertyName);
         }
 
+        private static async void TryDownloadDlc()
+        {
+            var id = $"0005000C{SelectedItem.Lower8Digits()}";
+            var title = Database.FindTitle(id);
+
+            if (title == null)
+                throw new NullReferenceException($"Could not locate dlc for title ID {id}");
+
+            await title.DownloadDLC();
+        }
+
+        private static async void TryDownloadPatch(string version)
+        {
+            var id = $"0005000E{SelectedItem.Lower8Digits()}";
+            var title = Database.FindTitle(id);
+
+            if (title == null)
+                throw new NullReferenceException($"Could not locate patch content for title ID {id}");
+
+            await title.DownloadUpdate(version);
+        }
+
         private static async Task DownloadContentClick(string contentType, string version = "0")
         {
             if (SelectedItem == null)
@@ -146,30 +168,11 @@ namespace MapleCake.Models
             if (SelectedItem.Name.IsNullOrEmpty())
                 throw new NullReferenceException($"[{SelectedItem}] Title Name is null or empty, can't proceed!");
 
-            if (contentType == "DLC" && SelectedItem.HasDLC) {
-                var id = $"0005000C{SelectedItem.Lower8Digits()}";
+            if (contentType == "DLC" && SelectedItem.HasDLC)
+                TryDownloadDlc();
 
-                var title = Database.FindTitle(id);
-                if (title == null)
-                    throw new NullReferenceException($"Could not locate content for title ID {id}");
-
-                await title.DownloadDLC();
-            }
-
-            if (contentType == "Patch") {
-                if (!SelectedItem.Versions.Any()) {
-                    MessageBox.Show($@"Update for '{SelectedItem.Name}' is not available");
-                    return;
-                }
-
-                var id = $"0005000E{SelectedItem.Lower8Digits()}";
-
-                var title = Database.FindTitle(id);
-                if (title == null)
-                    throw new NullReferenceException($"Could not locate content for title ID {id}");
-
-                await title.DownloadUpdate(version);
-            }
+            if (contentType == "Patch" && SelectedItem.HasPatch)
+                TryDownloadPatch(version);
 
             if (contentType == "eShop/Application") await SelectedItem.DownloadContent(version);
         }
