@@ -2,6 +2,7 @@
 - general bug fixes
 - Improved processing
 - LoadLibrary should ignore unauthorized paths
+- DownloadContentClick should no longer force close for unavailable content
 
 ### Change Log - 2.1.1.14 (05/25/2017)
 - Improved loading & processing
